feat: responsive features

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <section class="sec">
         <header>
             <a href="#"><img class="logo" src="images/logo.png"></a>
-            <ul>
+            <div class="toggle" onclick="menuToggle()"></div>
+            <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">What's New</a></li>
